--- a/js/template/navbar.hbs
+++ b/js/template/navbar.hbs
@@ -7,18 +7,11 @@
             	</a>
             </li>
             <li class="dropdown" id="menu-messages">
-            	<a href="#" data-toggle="dropdown" data-target="#menu-messages" class="dropdown-toggle">
+            	<a href="#" {{action message href=true}}>
             		<i class="icon icon-envelope"></i> 
             		<span class="text">消息</span> 
             		<span class="label label-important">5</span> 
-            		<b class="caret"></b>
             	</a>
-                <ul class="dropdown-menu">
-                    <li><a class="sAdd" title="" href="#">新信息</a></li>
-                    <li><a class="sInbox" title="" href="#">收件箱</a></li>
-                    <li><a class="sOutbox" title="" href="#">发件箱</a></li>
-                    <li><a class="sTrash" title="" href="#">废纸篓</a></li>
-                </ul>
             </li>
             <li>
             	<a title="" href="#"  {{action settings href=true}}>
