--- a/js/template/panel/title_mark.hbs
+++ b/js/template/panel/title_mark.hbs
@@ -7,7 +7,7 @@
                                         <label>论文分数：</label>
                                     </div>
                                     <div class="controls">
-                                        <input type="password" name="old-password">
+                                        <input type="text">
                                     </div>
                                 </div>
                                 <div class="control-group">
@@ -15,7 +15,7 @@
                                         <label>答辩分数：</label>
                                     </div>
                                     <div class="controls">
-                                        <input type="password" name="password">
+                                        <input type="text">
                                     </div>
                                 </div>
                                 <div class="control-group">
@@ -23,7 +23,7 @@
                                         <label>评价：</label>
                                     </div>
                                     <div class="controls">
-                                        <textarea type="text" name="re-password" style="height: 109px; float: right; width: 187px; margin: 0px 0px 10px;"></textarea>
+                                        <textarea type="text" style="height: 109px; float: right; width: 187px; margin: 0px 0px 10px;"></textarea>
                                     </div>
                                 </div>
                             </fieldset>
