--- a/css/theses.css
+++ b/css/theses.css
@@ -2,3 +2,4 @@
 @import url('bootstrap-responsive.min.css');
 @import url('theses.main.css');
 @import url('theses.gray.css');
+@import url('theses.message.css');
