--- a/css/theses.message.css
+++ b/css/theses.message.css
@@ -28,7 +28,7 @@
   -moz-animation-duration: 400ms;
   -moz-animation-timing-function: ease;
   -moz-animation-name: showPanel;
-  opacity: 1;
+  opacity: 0.9999; /* hack for safari */
 }
 .overlay.unactive #message-panel {
   -webkit-animation-duration: 400ms;
@@ -155,11 +155,11 @@
 }
 
 .conversation.selected {
-  border-bottom-color: #444;
+  border-bottom-color: #666;
   background-image:-webkit-linear-gradient(top, #3AADFF, #3F9CFF);
   background-image:linear-gradient(top, #3AADFF, #3F9CFF);
 
-  box-shadow:inset 0 1px 0 rgba(0,0,0,0.5),inset -1px 0px 0px rgba(0,0,0,0.5),inset 0 -1px 1px rgba(0,0,0,0.0),0 1px 3px rgba(0,0,0,0.4);
+  box-shadow:inset 0 -1px 1px rgba(0,0,0,0.2),inset 0 1px 1px rgba(0,0,0,0.5),inset -1px 0px 0px rgba(0,0,0,0.5);
 }
 
 .conversation-new-flag {
