--- a/js/template/message.hbs
+++ b/js/template/message.hbs
@@ -10,9 +10,18 @@
                 </button>
             </header>
             <div id="conversations">
-                {{#each Theses.messagesManager.conversations}}
-                    {{view Theses.ConversationRow conversation=this}}
-                {{/each}}
+                {{#with Theses.messagesManager}}
+                    {{#each conversations}}
+                        {{view Theses.ConversationRow conversation=this}}
+                    {{/each}}
+                    <div class="more-conversations">
+                        {{#if loadingMoreConversations}}
+                            {{view Theses.LoadingView}}
+                        {{else}}
+                            <a class="load-more-button" {{action loadMoreConversations}}>加载更多</a>
+                        {{/if}}
+                    </div>
+                {{/with}}
             </div>
         </div>
         <div id="message-right">
@@ -34,88 +43,92 @@
                         {{#if pendingNewConversation}}
                             {{view Theses.LoadingView}}
                         {{else}}
-                            <input type="text" placeholder="对方的名字"/>
-                            <button class="btn btn-primary">开始</button>
+                            <form>
+                                {{view Ember.TextField placeholder="对方的用户名" valueBinding="newConversationTarget"}}
+                                <button class="btn btn-primary" {{bindAttr disabled="newConversationStartButtonDisabled"}} {{action newConversationStart}} type="submit">开始</button>
+                            </form>
                         {{/if}}
                     </div>
                 </div>
             {{else}}
-            <div class="message-content-wrapper">
-                <div class="message-content">
-                    <div class="message-row message-row-left">
-                        <div class="message-row-inner">
-                            <img class="bubble-avatar" src="http://lwapi-picmin.stor.sinaapp.com/user_1_22.jpg" />
-                            <div class="bubble">
-                                在吗？
+                {{#if selectedConversation}}
+                    <div class="message-content-wrapper">
+                        <div class="message-content">
+                            <div class="message-row message-row-left">
+                                <div class="message-row-inner">
+                                    <img class="bubble-avatar" src="http://lwapi-picmin.stor.sinaapp.com/user_1_22.jpg" />
+                                    <div class="bubble">
+                                        在吗？
+                                    </div>
+                                </div>
+                                <div class="time">09:21 04-11</div>
+                            </div>
+
+                            <div class="message-row message-row-right">
+                                <div class="message-row-inner">
+                                <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
+                                <div class="bubble bubble-left">
+                                    在
+                                </div>
+                                </div>
+                                <div class="time">09:21 04-11</div>
+                            </div>
+
+                            <div class="message-row message-row-left">
+                                <div class="message-row-inner">
+                                <img class="bubble-avatar" src="http://lwapi-picmin.stor.sinaapp.com/user_1_22.jpg" />
+                                <div class="bubble">
+                                    发送邮件通知的接口做好了，文档更新到了Gist上
+                                </div>
+                                </div>
+                                <div class="time">09:21 04-11</div>
+                            </div>
+
+                            <div class="message-row message-row-right">
+                                <div class="message-row-inner">
+                                <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
+                                <div class="bubble bubble-left">
+                                    好的
+                                </div>
+                                </div>
+                                <div class="time">09:21 04-11</div>
+                            </div>
+                            <div class="message-row message-row-right">
+                                <div class="message-row-inner">
+                                <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
+                                <div class="bubble bubble-left">
+                                    那个文档上传的接口有问题
+                                </div>
+                                </div>
+                                <div class="time">09:21 04-11</div>
+                            </div>
+                            <div class="message-row message-row-right">
+                                <div class="message-row-inner">
+                                <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
+                                <div class="bubble bubble-left">
+                                    好像读不了上传文件的文件名
+                                </div>
+                                </div>
+                                <div class="time">09:21 04-11</div>
+                            </div>
+
+                            <div class="message-row message-row-left">
+                                <div class="message-row-inner">
+                                <img class="bubble-avatar" src="http://lwapi-picmin.stor.sinaapp.com/user_1_22.jpg" />
+                                <div class="bubble">
+                                    好，我去看看
+                                </div>
+                                </div>
+                                <div class="time">09:21 04-11</div>
                             </div>
                         </div>
-                        <div class="time">09:21 04-11</div>
+                        <div class="message-input-wrapper">
+                            <div class="line-separator"></div>
+                            <input type="text" />
+                            <button class="btn btn-primary btn-mini">发送</button>
+                        </div>
                     </div>
-
-                    <div class="message-row message-row-right">
-                        <div class="message-row-inner">
-                        <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
-                        <div class="bubble bubble-left">
-                            在
-                        </div>
-                        </div>
-                        <div class="time">09:21 04-11</div>
-                    </div>
-
-                    <div class="message-row message-row-left">
-                        <div class="message-row-inner">
-                        <img class="bubble-avatar" src="http://lwapi-picmin.stor.sinaapp.com/user_1_22.jpg" />
-                        <div class="bubble">
-                            发送邮件通知的接口做好了，文档更新到了Gist上
-                        </div>
-                        </div>
-                        <div class="time">09:21 04-11</div>
-                    </div>
-
-                    <div class="message-row message-row-right">
-                        <div class="message-row-inner">
-                        <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
-                        <div class="bubble bubble-left">
-                            好的
-                        </div>
-                        </div>
-                        <div class="time">09:21 04-11</div>
-                    </div>
-                    <div class="message-row message-row-right">
-                        <div class="message-row-inner">
-                        <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
-                        <div class="bubble bubble-left">
-                            那个文档上传的接口有问题
-                        </div>
-                        </div>
-                        <div class="time">09:21 04-11</div>
-                    </div>
-                    <div class="message-row message-row-right">
-                        <div class="message-row-inner">
-                        <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
-                        <div class="bubble bubble-left">
-                            好像读不了上传文件的文件名
-                        </div>
-                        </div>
-                        <div class="time">09:21 04-11</div>
-                    </div>
-
-                    <div class="message-row message-row-left">
-                        <div class="message-row-inner">
-                        <img class="bubble-avatar" src="http://lwapi-picmin.stor.sinaapp.com/user_1_22.jpg" />
-                        <div class="bubble">
-                            好，我去看看
-                        </div>
-                        </div>
-                        <div class="time">09:21 04-11</div>
-                    </div>
-                </div>
-                <div class="message-input-wrapper">
-                    <div class="line-separator"></div>
-                    <input type="text" />
-                    <button class="btn btn-primary btn-mini">发送</button>
-                </div>
-            </div>
+                {{/if}}
             {{/if}}
         </div>
 <!--
