初步完成未读数轮询逻辑

--- a/css/theses.gray.css
+++ b/css/theses.gray.css
@@ -19,6 +19,11 @@ body {
 
 }
 
+.label-mute {
+  background: #777;
+  color: #ddd;
+}
+
 #search input[type=text], #search button {
 	background-color: #222222;
 }
