--- a/css/theses.message.css
+++ b/css/theses.message.css
@@ -302,6 +302,7 @@
   min-height: 33px;
   position: relative;
   padding-bottom: 5px;
+  cursor: default;
 }
 
 .message-content .message-row-left {
@@ -388,6 +389,14 @@
   font-size: 10px;
   -webkit-text-size-adjust: none;
   color: #999;
+  text-shadow: 0px 1px 0px rgba(255,255,255,0.6);
+}
+.message-row .failed {
+  clear: both;
+  padding:0 44px;
+  font-size: 10px;
+  -webkit-text-size-adjust: none;
+  color: red;
   text-shadow: 0px 1px 0px rgba(255,255,255,0.6);
 }
 .message-row-left {
@@ -520,6 +529,9 @@
     margin-right: 0px;
   }
   .message-row .time {
+    padding: 0 10px;
+  } 
+  .message-row .failed {
     padding: 0 10px;
   } 
 
