--- a/js/template/message.hbs
+++ b/js/template/message.hbs
@@ -14,13 +14,16 @@
                     {{#each conversations}}
                         {{view Theses.ConversationRow conversation=this}}
                     {{/each}}
-                    <div class="more-conversations">
-                        {{#if loadingMoreConversations}}
+                    {{#if loadingMoreConversations}}
+                        <div class="more-conversations">
                             {{view Theses.LoadingView}}
-                        {{else}}
+                        </div>
+                    {{/if}}
+                    {{#if ../showsLoadMoreButton}}
+                        <div class="more-conversations">
                             <a class="load-more-button" {{action loadMoreConversations}}>加载更多</a>
-                        {{/if}}
-                    </div>
+                        </div>
+                    {{/if}}
                 {{/with}}
             </div>
         </div>
@@ -53,96 +56,23 @@
             {{else}}
                 {{#if selectedConversation}}
                     <div class="message-content-wrapper">
-                        <div class="message-content">
-                            <div class="message-row message-row-left">
-                                <div class="message-row-inner">
-                                    <img class="bubble-avatar" src="http://lwapi-picmin.stor.sinaapp.com/user_1_22.jpg" />
-                                    <div class="bubble">
-                                        在吗？
-                                    </div>
-                                </div>
-                                <div class="time">09:21 04-11</div>
-                            </div>
-
-                            <div class="message-row message-row-right">
-                                <div class="message-row-inner">
-                                <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
-                                <div class="bubble bubble-left">
-                                    在
-                                </div>
-                                </div>
-                                <div class="time">09:21 04-11</div>
-                            </div>
-
-                            <div class="message-row message-row-left">
-                                <div class="message-row-inner">
-                                <img class="bubble-avatar" src="http://lwapi-picmin.stor.sinaapp.com/user_1_22.jpg" />
-                                <div class="bubble">
-                                    发送邮件通知的接口做好了，文档更新到了Gist上
-                                </div>
-                                </div>
-                                <div class="time">09:21 04-11</div>
-                            </div>
-
-                            <div class="message-row message-row-right">
-                                <div class="message-row-inner">
-                                <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
-                                <div class="bubble bubble-left">
-                                    好的
-                                </div>
-                                </div>
-                                <div class="time">09:21 04-11</div>
-                            </div>
-                            <div class="message-row message-row-right">
-                                <div class="message-row-inner">
-                                <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
-                                <div class="bubble bubble-left">
-                                    那个文档上传的接口有问题
-                                </div>
-                                </div>
-                                <div class="time">09:21 04-11</div>
-                            </div>
-                            <div class="message-row message-row-right">
-                                <div class="message-row-inner">
-                                <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
-                                <div class="bubble bubble-left">
-                                    好像读不了上传文件的文件名
-                                </div>
-                                </div>
-                                <div class="time">09:21 04-11</div>
-                            </div>
-
-                            <div class="message-row message-row-left">
-                                <div class="message-row-inner">
-                                <img class="bubble-avatar" src="http://lwapi-picmin.stor.sinaapp.com/user_1_22.jpg" />
-                                <div class="bubble">
-                                    好，我去看看
-                                </div>
-                                </div>
-                                <div class="time">09:21 04-11</div>
-                            </div>
+                        <div class="message-content" id="message-content">
+                            {{#each selectedMessages}}
+                                {{view Theses.MessageRow content=this}}
+                            {{/each}}
                         </div>
                         <div class="message-input-wrapper">
                             <div class="line-separator"></div>
-                            <input type="text" />
-                            <button class="btn btn-primary btn-mini">发送</button>
+                            <form>
+                                {{view Ember.TextField valueBinding="currentInputMessageContent"}}
+                                <button class="btn btn-primary btn-mini" type="submit" {{action postButtonPressed}}>发送</button>
+                            </form>
                         </div>
                     </div>
                 {{/if}}
             {{/if}}
         </div>
-<!--
-        
-            <header class="navigation-bar">
-                <button class="btn btn-link" href="#">
-                    <i class="icon-chevron-left"></i>
-                </button>
-                <h4>bobo</h4>
-                
-            </header>
-            
-        
--->
+
         </div>
     </div>
 </div>
