--- a/js/template/navbar.hbs
+++ b/js/template/navbar.hbs
@@ -9,8 +9,8 @@
             <li class="dropdown" id="menu-messages">
             	<a href="#" {{action message href=true}}>
             		<i class="icon icon-envelope"></i> 
-            		<span class="text">消息</span> 
-            		<span {{bindAttr class=":label Theses.unreadManager.unreadCount:label-important:label-mute"}}>{{Theses.unreadManager.unreadCount}}</span> 
+            		<span class="text">私信</span> 
+            		<span {{bindAttr class=":label Theses.messagesManager.newFlagsCount:label-important:label-mute"}}>{{Theses.messagesManager.newFlagsCount}}</span> 
             	</a>
             </li>
             <li>
