--- a/css/theses.message.css
+++ b/css/theses.message.css
@@ -252,7 +252,7 @@
   margin: 12px 10px 11px 5px;
 
   border-radius: 4px;
-  border-bottom: 1px solid rgba(255,255,255,0.5);
+  border: 1px solid #aaa;
   float: left;
 }
 .message-current-info {
