--- a/js/template/m/dashboard.hbs
+++ b/js/template/m/dashboard.hbs
@@ -1,9 +1,54 @@
+{{#unless loadingMilestones}}
+<div class="row-fluid">
+	<div class="span12">
+		{{#if currentStone}}
+		<div class="alert alert-success no-margin"> 
+			论文流程已在进行中，当前阶段为：<b>{{currentStone.tip}}</b>
+		</div>
+		{{else}}
+		<div class="alert alert-warning no-margin"> 
+			目前论文流程还未开始。
+		</div>
+		{{/if}}
+	</div>
+</div>
+{{/unless}}
+
+<div class="row-fluid">
+	<div class="span12">
+		<div class="widget-box">
+			<div class="widget-title">
+				<span class="icon"><i class="icon-bullhorn"></i></span>
+				<h5>通知</h5>
+				<div class="buttons">
+					{{#if canPostNotice}}
+					<a href="#" {{action newNoticeButtonPressed href=true}} class="btn btn-mini"><i class="icon-plus"></i>发布</a>
+					{{/if}}
+					<a href="#" {{action reloadNoticeButtonPressed href=true}} class="btn btn-mini"><i class="icon-refresh"></i>刷新</a>
+				</div>
+			</div>
+			<div class="widget-content nopadding">
+				{{#if notices.length}}
+					<div class="review-title-list">
+						{{#each notices}}
+							
+						{{/each}}
+					</div>
+				{{else}}
+					{{view Theses.PromptView text="暂无数据，点击刷新来重新获取通知列表"}}
+				{{/if}}
+				{{view Theses.PagingView pageBinding="currentNoticePage" hasNextBinding="hasMoreNotices"}}
+			</div>
+		</div>
+	</div>
+</div>
+
 <div class="row-fluid">
 	<div class="span12">
 		<div class="widget-box">
 			<div class="widget-title">
 				<span class="icon"><i class="icon-time"></i></span>
-				<h5>里程碑时间</h5>
+				<h5>流程时间表</h5>
 				{{#if canOperation}}
 				<div class="buttons">
 					<a href="#" {{bindAttr class="submitTimesButtonClass"}} {{action submitTimesPressed target="view" href=true}}>
@@ -16,18 +61,9 @@
 				{{#if loadingMilestones}}
 					{{view Theses.LoadingView}}
 				{{else}}
-				{{#if currentStone}}
-				<div class="alert alert-success"> 
-					论文流程已在进行中，当前阶段为：<b>{{currentStone.tip}}</b>
-				</div>
-				{{else}}
-				<div class="alert alert-warning"> 
-					目前论文流程还未开始。
-				</div>
-				{{/if}}
 				<table class="table table-bordered table-hover table-striped">
 					<tr>
-						<th>里程碑</th><th>时间</th>
+						<th>项目</th><th>时间</th>
 					</tr>
 					{{#each milestones}}
 						{{#if canView}}
