弹出modal时禁止body滚动

--- a/js/template/main.hbs
+++ b/js/template/main.hbs
@@ -43,7 +43,7 @@
         {{outlet navbar}}	
     </div>
 </header>
-<section id="main-content">
+<section id="main-content" {{bindAttr class="modal-enabled"}}>
     {{outlet sidebar}}      
     <div id="content">
         <div id="content-container" class="container-fluid">
