--- a/css/theses.gray.css
+++ b/css/theses.gray.css
@@ -28,6 +28,11 @@ body {
   color: #ddd;
 }
 
+.modal-enabled {
+  position: relative;
+  overflow: hidden;
+}
+
 #search input[type=text], #search button {
 	background-color: #222222;
 }
