手机时切换栏目，自动关闭下拉导航栏

--- a/js/template/sidebar.hbs
+++ b/js/template/sidebar.hbs
@@ -7,7 +7,7 @@
             {{currentUser.username}} / {{currentUser.levelType}}
         </label>
     </div>
-    <a href="#" class="visible-phone">
+    <a href="#" id="phone-dropdown" class="visible-phone">
         {{Theses.mainController.currentNavTitle}}
     </a>
     <ul>
