修复打分界面错乱的问题

--- a/css/theses.gray.css
+++ b/css/theses.gray.css
@@ -756,6 +756,9 @@ form.update-profile fieldset.reset-password .control-label label {
   line-height: 30px;
   width: 90px;
 }
+form.update-profile fieldset.title-remark .control-label {
+  width: 90px;
+}
 form.update-profile fieldset.reset-password input {
   width: 186px;
 }
