--- a/js/template/panel/title_mark.hbs
+++ b/js/template/panel/title_mark.hbs
@@ -1,7 +1,7 @@
 
                     <form novalidate="" autocomplete="on" class="update-profile"> 
                         <div class="yield" style="padding-top:20px">
-                            <fieldset class="reset-password">
+                            <fieldset class="reset-password title-remark">
                                 <div class="control-group">
                                     {{view Theses.ScoreField valueBinding="articleScore" title="论文分数："}}
                                 </div>
