修改文档下载逻辑

--- a/js/template/m/title_chosen.hbs
+++ b/js/template/m/title_chosen.hbs
@@ -1,8 +1,8 @@
 {{#if Theses.milestoneManager.isTitleChosenTime}}
 	
 {{#if Theses.myTitlesManager.hasValidTitle}}
-	<div class="alert alert-block" style="margin-bottom:0px;margin-top:20px;">
-	  <h4>注意!</h4>
+	<div class="alert alert-block">
+	  <p>注意!</p>
 	  每个同学仅可以选择一个论题，再进行选择将不会成功。请前往 <a href="/#/titles_mine">我的论题</a> 页面查看当前已选择论题的状态。
 	</div>
 {{/if}}
