--- a/js/template/m/title_chosen.hbs
+++ b/js/template/m/title_chosen.hbs
@@ -2,8 +2,7 @@
 	
 {{#if Theses.myTitlesManager.hasValidTitle}}
 	<div class="alert alert-block">
-	  <p>注意!</p>
-	  每个同学仅可以选择一个论题，再进行选择将不会成功。请前往 <a href="/#/titles_mine">我的论题</a> 页面查看当前已选择论题的状态。
+	  <b>注意!</b> 每个同学仅可以选择一个论题，再进行选择将不会成功。请前往 <a href="/#/titles_mine">我的论题</a> 页面查看当前已选择论题的状态。
 	</div>
 {{/if}}
 
