--- a/css/theses.gray.css
+++ b/css/theses.gray.css
@@ -1453,3 +1453,7 @@ form.update-profile fieldset.reset-password textarea {
 .load-more-container button {
   font-size: 14px;
 }
+
+.email-verification-info button {
+  float: right;
+}
