完成模板预编译

--- a/js/template/panel/profile.hbs
+++ b/js/template/panel/profile.hbs
@@ -22,7 +22,7 @@
                                         <label>姓名：</label>
                                     </div>
                                     <div class="controls">
-                                        <input type="text" placeholder="请输入姓名…" name='name' {{bindAttr value='currentUser.screenname'}}>
+                                        <input type="text" placeholder="请输入姓名…" name='name' {{bindAttr value="currentUser.screenname"}}>
                                     </div>
                                 </div>
                                 <div class="control-group">
