文档列表显示上传者的头像

--- a/js/template/v/document_cell.hbs
+++ b/js/template/v/document_cell.hbs
@@ -6,7 +6,7 @@
 	</div>
 	<div class="document-info">
 		<h4>{{view.doc.displayName}}</h4>
-		<span>{{view.lineTwo}}</span>
+		<span>{{view Theses.MessageAvatarView userBinding="view.doc.author"}}{{view.lineTwo}}</span>
 	</div>
 	{{#if view.canDelete}}
 		<button class="close" {{action delete target="view" bubbles=false}}>&times;</button>
