增加文档创建的基本框架

--- a/css/theses.css
+++ b/css/theses.css
@@ -3,3 +3,4 @@
 @import url('theses.main.css');
 @import url('theses.gray.css');
 @import url('theses.message.css');
+@import url('theses.document.css');
