--- a/js/template/main.hbs
+++ b/js/template/main.hbs
@@ -51,6 +51,7 @@
         </div>
     </div>
     {{outlet message}}
+    {{outlet document}}
     {{outlet upload}}
      <div id="sidebar-copyright" class="desktop">
         Design, Dev by <a href="http://weibo.com/naituw">@Naituw</a> , <a href="http://weibo.com/jiayoushuishou">@bo潮</a><br/>
