--- a/js/template/message.hbs
+++ b/js/template/message.hbs
@@ -1,5 +1,5 @@
 {{#if opened}}
-<div {{bindAttr class=":overlay active:active:unactive"}} class="overlay active">
+<div {{bindAttr class=":overlay active:active:unactive"}}>
     <div class="cover">
 
     <div id="message-panel"> 
